# cJSON-Tools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_VERIFICATION.md  FINAL_CI_VERIFICATION.md  LICENSE  Makefile  OPTIMIZATIONS.md  PYTHON.md  README.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.8.0.md  RELEASE_NOTES_v1.9.0.md  ROLLBACK_STATUS.md  SUMMARY.md  build-config.mk  llm.py  test.ipynb  tmp.npy  tmp.pt  tmp.safetensors
.github/: pull_request_template.md
AimV2_rs/: Cargo.toml
AimV2_rs/src/: lib.rs  main.rs
AimV2_rs/tests/: load.rs
examples/: builder_example.py
include/: json_flattener.h
model/: README.md  config.json  model.safetensors  modeling_aimv2.py  preprocessor_config.json
py-lib/: .pre-commit-config.yaml  FORMATTING.md  MANIFEST.in  Makefile  README.md  format.py  requirements-dev.txt  setup.py
python/: INSTALL.md  MANIFEST.in  README.md  pyproject.toml  setup.py
python/benchmarks/: benchmark.py
python/benchmarks/results/: benchmark_results.md  python_benchmark_results.md
python/examples/: example.py
python/json_alchemy/: _json_alchemy.c
python/json_alchemy/include/: json_utils.h
scripts/: check_pypi_status.py  performance_test.py  platform_compatibility.py  publish_to_pypi.py  quick_test.py  run_all_tests.py  setup_dev_env.sh  test_c_only_windows.py  test_everything_locally.py  test_windows_build.py  test_windows_docker.py  trigger_pypi_publish.sh
src/: json_flattener.c  json_schema_generator.c  json_utils.c
test/: BENCHMARKING.md  Makefile  benchmark_flatten_large_test_0threads.json  create_assets.py  run_tests.sh  (+38 more)
(+176 files in other folders)
